compiler/src/test/resources/golden/errors/sam_bad_return.dawn
use java "java.util.stream.IntStream"

pub fn main() -> Unit !io = {
  let s = IntStream.range(0, 3).expect("s").map(fn(x) => "nope")
  println("unreachable")
}
