compiler/src/test/resources/golden/errors/sam_bad_return.err
error: this function does not fit `IntUnaryOperator`
  --> sam_bad_return.dawn:4:49
  |
4 |   let s = IntStream.range(0, 3).expect("s").map(fn(x) => "nope")
  |                                                 ^^^^^^^^^^^^^^^
  = hint: expected shape: fn(Int) -> Int !io
  single abstract method: public abstract int java.util.function.IntUnaryOperator.applyAsInt(int)
